compiler/testData/diagnostics/tests/typealias/kt14612.fir.kt
// ISSUE: KT-14612

typealias S = <!RECURSIVE_TYPEALIAS_EXPANSION!>@S Suppress<!>
